# GLCM_SVM

./: .gitignore  CMakeLists.txt  Classifier.cpp  Classifier.h  GLCM.cpp  GLCM.h  README.md  main.cpp
binary_classification/: svm_model
utils/: MakeImgData.ipynb
utils/.ipynb_checkpoints/: MakeImgData-checkpoint.ipynb
wood_grass/: svm_model
